# MRHMM-py

./: .gitignore  CMakeLists.txt  alphabetacompress.cpp  setup.py
.github/workflows/: build.yml
src/: CMakeLists.txt  alphabetacompress.cpp
